--- a/Index.html
+++ b/Index.html
@@ -91,6 +91,19 @@
         .website-link {
             background: #007BFF;
         }
+
+        .rate-box {
+            position: fixed;
+            bottom: 10px;
+            left: 10px;
+            background: #e0f7fa;
+            color: #00695c;
+            padding: 8px 14px;
+            border-radius: 8px;
+            font-size: 14px;
+            box-shadow: 0 2px 6px rgba(0,0,0,0.1);
+            z-index: 1000;
+        }
     </style>
 </head>
 <body>
@@ -111,7 +124,12 @@
         </div>
     </div>
 
+    <!-- فقط نمایش عدد -->
+    <div class="rate-box" id="rateBox">۲۴</div>
+
     <script>
+        const TAX_RATE = 1.2, MULTIPLIER = 24;
+
         function toEnglishNumber(str) {
             const persian = [/۰/g, /۱/g, /۲/g, /۳/g, /۴/g, /۵/g, /۶/g, /۷/g, /۸/g, /۹/g];
             const arabic  = [/٠/g, /١/g, /٢/g, /٣/g, /٤/g, /٥/g, /٦/g, /٧/g, /٨/g, /٩/g];
@@ -126,7 +144,6 @@
         }
 
         function calculate() {
-            const TAX_RATE = 1.2, MULTIPLIER = 24;
             let inputCode = document.getElementById("inputCode").value.trim();
             inputCode = toEnglishNumber(inputCode);
 
@@ -161,6 +178,9 @@
                     document.getElementById("result").innerText = last;
                 }
             } catch (e) {}
+
+            // نمایش فقط عدد
+            document.getElementById("rateBox").innerText = MULTIPLIER;
         }
 
         document.getElementById("inputCode").addEventListener("keyup", function(event) {
